tests/valid/tcomp000_double_wild/tcomp000_double_wild.agu
-- Author: tcomp000, Vasco T. Vasconcelos

let f (_, _) : (Unit, Int) -> Int = 5

let _ : Int = f (unit, 13)