tests/invalid-semantic/tcomp000-scoping/tcomp000-scoping.agu
-- tcomp000, Vasco T. Vasconcelos

let main (_) : Unit -> Unit =
  let x : Int = ( 4 + 3 ; x + 2)